--- a/github.html
+++ b/github.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Github</title>
-    <link rel="stylesheet" href="estilo/social.css">
+    <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
     <img src="pacote-d013/imagens/tela-github.jpg" alt="GitHub">
